# skillsentry

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: RESEARCH.md  RULES.md  demo.tape
fixtures/benign/: get_weather.tool.json  mcp_config.json
fixtures/benign/search_docs/: SKILL.md
fixtures/malicious/: add_numbers.tool.json  weather_lookup.rugpull.json
fixtures/malicious/file_helper/: SKILL.md
src/skillsentry/: __init__.py  __main__.py  cli.py  detector.py  llm.py  models.py  normalize.py  parsers.py  permissions.py  report.py  rules.py
tests/: test_benign.py  test_detection.py  test_malicious.py
